canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
spec:
  selector:
    app: dns-test-app-canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
